cmake_minimum_required(VERSION 2.8.11)

add_subdirectory(musicCoreKits)
add_subdirectory(musicLrcKits)
add_subdirectory(musicNetworkKits)
add_subdirectory(musicPlaylistKits)
add_subdirectory(musicSearchKits)
add_subdirectory(musicToolsKits)
add_subdirectory(musicToolsSetsKits)
add_subdirectory(musicUtilsKits)
add_subdirectory(musicVideoKits)
