cmake_minimum_required(VERSION 2.8.11)

add_subdirectory(musicLrcKits)
add_subdirectory(musicRemoteKits)
add_subdirectory(musicSearchKits)
add_subdirectory(musicToolsKits)
add_subdirectory(musicToolsSetsKits)
add_subdirectory(musicUiKits)
add_subdirectory(musicVideoKits)
add_subdirectory(musicCoreKits)
add_subdirectory(musicWidgetKits)
